--- a/index.html
+++ b/index.html
@@ -24,12 +24,13 @@
         <h2>Oasys Okubo</h1>
         <!-- <p>Welcome to my Page!</p> -->
         <br/>
-        <p>I am a Software professional with experience across the entire stack. I do full-stack software engineering
+        <p>
+          I am a Software professional with experience across the entire stack. I do full-stack software engineering
           at JPMorgan Chase right after graduating from University of California, Santa Cruz. Prior to that during my time in University,
           I spent half a year interning at Keysight Technologies creating full-stack application and data science work. 
         </p>
         <br/>
-        <a href="#footer">contact me ></a>
+        <!-- <a href="#footer">contact me ></a> -->
       </div>
 
       <!-- <div class="hero-image">
