--- a/freelance_projects.html
+++ b/freelance_projects.html
@@ -6,16 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
   </head>
-  <body style="overflow: hidden">
+  <body>
     <header>
       <div style="position: absolute; left: 20px">
-        <a href="projects.html">
-        <p style="cursor: pointer; color: rgb(60, 188, 231); text-decoration: underline;">
-          
-            Projects
-          
+        <p href="" style="cursor: pointer; color: rgb(60, 188, 231); text-decoration: underline;">
+          Projects
         </p>
-      </a>
       </div>
       <div class="switch">
         <div class="flicker"></div>
@@ -23,27 +19,32 @@
       </div>
     </header>
 
-    <section class="main">
-      <div style="margin: 300px">
-        <h2>Oasys Okubo</h1>
-        <!-- <p>Welcome to my Page!</p> -->
-        <br/>
-        <p>
-          I am a software and data professional with experience across the entire stack. I do full-stack software engineering
-          at JPMorgan Chase right after graduating from University of California, Santa Cruz. Prior to that during my time in University,
-          I spent half a year interning at Keysight Technologies creating full-stack application and data science and engineering work.
-          Prior to this, I was interning at Maxar Technologies as a Software Engineer, developing new full-stack features and doing data engineering work.
-        </p>
-        <br/>
-        <!-- <a href="#footer">contact me ></a> -->
+    <section class="sub-section">
+      <!-- <div style="margin: 300px"> -->
+        <div class="square" id="revenoo">
+          <h2>Payment Dashboard</h2>
+          <p>A B2B Payment Tracker</p>
+          <br/>
+          <a href="https://github.com/kubowania/Project-04">check it out ></a>
       </div>
-
-      <!-- <div class="hero-image">
-        <div class="cube" id="react"></div>
-        <div class="cube" id="javascript"></div>
-        <div class="cube" id="html"></div>
-        <div class="cube" id="css"></div>
-      </div> -->
+      <div class="square" id="burgerrator">
+        <h2>Burger App</h2>
+        <p>App for Rating Burgers</p>
+        <br/>
+        <a href="https://github.com/kubowania">check it out ></a>
+      </div>
+      <div class="square" id="revenoo">
+        <h2>Payment Dashboard</h2>
+        <p>A B2B Payment Tracker</p>
+        <br/>
+        <a href="https://github.com/kubowania/Project-04">check it out ></a>
+    </div>
+    <div class="square" id="burgerrator">
+      <h2>Burger App</h2>
+      <p>App for Rating Burgers</p>
+      <br/>
+      <a href="https://github.com/kubowania">check it out ></a>
+    </div>
 
     </section>
 
@@ -75,11 +76,9 @@
     </section> -->
 
     <footer id="footer" style=
-    "display: flex;
-    background-color:rgb(136, 136, 136);
-    position: absolute;
-    bottom: 0;
-    width: 100%;">
+    "bottom: 0;
+    width: 100%;
+    margin-top: 50px;">
       <div style="margin: 20px">
         <p>© 2023 Oasys Okubo</p>
       </div>
